adding auth features (only with email + password)

--- a/.env.example
+++ b/.env.example
@@ -13,4 +13,8 @@ POSTGRES_ENTITIES=
 POSTGRES_ENTITIES_DIR=
 
 JWT_SECRET=
-JWT_ACCESS_EXPIRESIN=
+JWT_ACCESS_EXPIRES_IN=
+JWT_REFRESH_ACCESS_EXPIRES_IN=
+
+# Both ACCESS_EXPIRES_IN should be in seconds.
+
